--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:ycI4130yqA0yhHAStccv21QBrwe7hVrcDvUVo9NsZGI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
