--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
-        "vue": "^2.5.17"
+        "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "vee-validate": "^2.1.0-beta.8"
     }
 }
