--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "vee-validate": "^2.1.0-beta.8"
+        "moment": "^2.22.2",
+        "vee-validate": "^2.1.0-beta.8",
+        "vuejs-datepicker": "^1.5.3"
     }
 }
