--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "moment": "^2.22.2",
         "vee-validate": "^2.1.0-beta.8",
+        "vue-select": "^2.5.1",
         "vuejs-datepicker": "^1.5.3"
     }
 }
