Módulo de Acceso 100%
Se minifica los archivos JS usando Gulp.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/functions.js": "/js/functions.js",
     "/css/plantilla.css": "/css/plantilla.css",
     "/js/plantilla.js": "/js/plantilla.js"
 }
