--- a/.env.example
+++ b/.env.example
@@ -38,5 +38,5 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-NAME_PROJECT = "D' PINTART | Sistema Integrado"
+NAME_PROJECT = "D' PINTART - Sistema Integrado"
 NAME_COMMERCIAL_PROJECT = "D' PINTART"
