--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NAME_PROJECT = "D' PINTART - Sistema Integrado"
 NAME_COMMERCIAL_PROJECT = "D' PINTART"
+
+MAIL_ENCRYPTIONKOLAZPUTO="VARIABLE"
