[new_module] Google Calendar
Api para consumo de eventos.

--- a/.env.example
+++ b/.env.example
@@ -41,4 +41,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 NAME_PROJECT = "D' PINTART - Sistema Integrado"
 NAME_COMMERCIAL_PROJECT = "D' PINTART"
 
-MAIL_ENCRYPTIONKOLAZPUTO="VARIABLE"
+GOOGLE_CLIENT_ID = "1086702478332-nbjgbhn1mpor39tob8c4vaqpa7facmba.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET_ID = "6ouCvSafvG_JF_NoAID1kNfX"
+CALENDAR_ID = "gbv3b9pkfkc7ns3pfs4147tcdk@group.calendar.google.com"
