--- a/package.json
+++ b/package.json
@@ -11,19 +11,26 @@
   },
   "devDependencies": {
     "axios": "^0.17",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.1",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-cleancss": "^0.2.2",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-minify-css": "^1.2.4",
+    "gulp-sequence": "^1.0.0",
     "gulp-serve": "^1.4.0",
     "gulp-uglify": "^3.0.1",
     "jquery": "^3.2",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
-    "vue": "^2.5.7"
+    "run-sequence": "^2.2.1",
+    "vue": "^2.5.7",
+    "vue-full-calendar": "^2.7.0"
   },
   "dependencies": {
     "gulp-cached": "^1.1.1",
