[Notifications SMS]  Versión DEMO

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,8 @@ NAME_COMMERCIAL_PROJECT = "D' PINTART"
 GOOGLE_CLIENT_ID = "1086702478332-nbjgbhn1mpor39tob8c4vaqpa7facmba.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET_ID = "6ouCvSafvG_JF_NoAID1kNfX"
 CALENDAR_ID = "gbv3b9pkfkc7ns3pfs4147tcdk@group.calendar.google.com"
+
+LOG_CHANNEL=daily
+
+NEXMO_KEY=1b959df7
+NEXMO_SECRET=GfdCoWiis682hgrn
