--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,14 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "authy/php": "^3.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "lavary/laravel-menu": "^1.7"
+        "lavary/laravel-menu": "^1.7",
+        "nexmo/client": "^1.6",
+        "nexmo/laravel": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
