--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^1.0",
         "lavary/laravel-menu": "^1.7",
         "nexmo/client": "^1.6",
-        "nexmo/laravel": "^1.1"
+        "nexmo/laravel": "^1.1",
+        "rap2hpoutre/laravel-log-viewer": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
