--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/dev/js/app.js": "/dev/js/app.js",
     "/dev/js/functions.js": "/dev/js/functions.js",
     "/dev/css/plantilla.css": "/dev/css/plantilla.css",
+    "/dist/css/data-tables.min.css": "/dist/css/data-tables.min.css",
     "/dev/js/plantilla.js": "/dev/js/plantilla.js"
 }
