--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
-    "/dev/js/app.js": "/dev/js/app.js",
-    "/dev/js/functions.js": "/dev/js/functions.js",
-    "/dev/css/plantilla.css": "/dev/css/plantilla.css",
+    "/dist/js/app.min.js": "/dist/js/app.min.js",
+    "/dist/js/functions.min.js": "/dist/js/functions.min.js",
+    "/dist/css/plantilla.min.css": "/dist/css/plantilla.min.css",
     "/dist/css/data-tables.min.css": "/dist/css/data-tables.min.css",
-    "/dev/js/plantilla.js": "/dev/js/plantilla.js"
+    "/dist/js/plantilla.min.js": "/dist/js/plantilla.min.js"
 }
