--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
         "babel-preset-stage-2": "^6.24.1",
         "bootstrap": "^4.0.0",
         "bootstrap-sass": "^3.3.7",
+        "bootstrap-vue": "^2.0.0-rc.14",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
