--- a/admin/package.json
+++ b/admin/package.json
@@ -24,6 +24,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
+        "vue-bootstrap-datetimepicker": "^5.0.1",
         "vue-full-calendar": "^2.7.0",
         "vue-template-compiler": "^2.6.6"
     },
@@ -33,7 +34,6 @@
         "moment": "^2.22.2",
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.1.0-beta.8",
-        "vue-select": "^2.5.1",
-        "vuejs-datepicker": "^1.5.3"
+        "vue-select": "^2.5.1"
     }
 }
