--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.min.js": "/js/app.min.js",
+    "/js/app.min.js.map": "/js/app.min.js.map",
     "/css/main.min.css": "/css/main.min.css",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js",
