--- a/admin/.env.example
+++ b/admin/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ycI4130yqA0yhHAStccv21QBrwe7hVrcDvUVo9NsZGI=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://admin.dpintart.devel
 
 LOG_CHANNEL=stack
 
@@ -55,3 +55,5 @@ LOG_CHANNEL=daily
 
 NEXMO_KEY=1b959df7
 NEXMO_SECRET=GfdCoWiis682hgrn
+
+META_DESCRIPTION = "Sistema de gestión de procesos de fabricación de la empresa D' Pintart"
