--- a/admin/composer.json
+++ b/admin/composer.json
@@ -7,12 +7,12 @@
         "laravel"
     ],
     "license": "MIT",
-    "type": "project",
     "require": {
         "php": "^7.1.3",
         "authy/php": "^3.0",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
+        "intervention/image": "^2.4",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "lavary/laravel-menu": "^1.7",
