--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
         "bootstrap-sass": "^3.3.7",
         "bootstrap-vue": "^2.0.0-rc.14",
         "cross-env": "^5.1",
+        "datatables.net-bs4": "^1.10.19",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
