[admin] module product theme

--- a/admin/package.json
+++ b/admin/package.json
@@ -33,6 +33,7 @@
         "datatables": "^1.10.18",
         "gulp-cached": "^1.1.1",
         "moment": "^2.22.2",
+        "npm": "^6.9.0",
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.1.0-beta.8",
         "vue-select": "^2.5.1"
