--- a/web/.env.example
+++ b/web/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:HfCcfoWyPzcGBYRwc526EqiDgrCIIvGTsDO1TarlhLg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.dpintart.devel
 
 LOG_CHANNEL=stack
 
@@ -37,3 +37,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+URL_ADMIN = "http://admin.dpintart.devel"
+
+NAME_PROJECT = "D' Pintart";
