[admin] products load image demo

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -13,5 +13,6 @@
     "/images/user-default.jpg": "/images/user-default.jpg",
     "/images/project-4.jpg": "/images/project-4.jpg",
     "/images/favicon.ico": "/images/favicon.ico",
+    "/images/not-image-product.png": "/images/not-image-product.png",
     "/js/login-colaborator.min.js": "/js/login-colaborator.min.js"
 }
