--- a/admin/package.json
+++ b/admin/package.json
@@ -26,6 +26,7 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-bootstrap-datetimepicker": "^5.0.1",
+        "vue-croppa": "^1.3.8",
         "vue-full-calendar": "^2.7.0",
         "vue-template-compiler": "^2.6.6"
     },
