--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,8 @@
     },
     "devDependencies": {
         "axios": "^0.18",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^8.0.5",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -21,6 +23,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
+        "vue-croppa": "^1.3.8",
         "vue-template-compiler": "^2.5.22"
     }
 }
