[admin] upload image module Products

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -14,5 +14,6 @@
     "/images/project-4.jpg": "/images/project-4.jpg",
     "/images/favicon.ico": "/images/favicon.ico",
     "/images/not-image-product.png": "/images/not-image-product.png",
+    "/images/placeholder-upload.png": "/images/placeholder-upload.png",
     "/js/login-colaborator.min.js": "/js/login-colaborator.min.js"
 }
