--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
         "babel-core": "^6.26.3",
         "babel-loader": "^8.0.5",
         "bootstrap": "^4.0.0",
+        "copy-webpack-plugin": "^5.0.2",
         "cross-env": "^5.1",
+        "imagemin-webpack-plugin": "^2.4.2",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
@@ -25,5 +27,8 @@
         "vue": "^2.5.17",
         "vue-croppa": "^1.3.8",
         "vue-template-compiler": "^2.5.22"
+    },
+    "dependencies": {
+        "imagemin-mozjpeg": "^8.0.0"
     }
 }
