--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -15,5 +15,6 @@
     "/images/favicon.ico": "/images/favicon.ico",
     "/images/not-image-product.png": "/images/not-image-product.png",
     "/images/placeholder-upload.png": "/images/placeholder-upload.png",
+    "/images/marca_agua.png": "/images/marca_agua.png",
     "/js/login-colaborator.min.js": "/js/login-colaborator.min.js"
 }
