--- a/admin/package.json
+++ b/admin/package.json
@@ -35,10 +35,8 @@
         "gulp-cached": "^1.1.1",
         "moment": "^2.22.2",
         "npm": "^6.9.0",
-        "slick": "^1.12.2",
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.1.0-beta.8",
-        "vue-select": "^2.5.1",
-        "vue-slick": "^1.1.15"
+        "vue-select": "^2.5.1"
     }
 }
