--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,6 +1,13 @@
 {
-    "/js/app.min.js": "/js/app.min.js",
+    "/js/modules/access.min.js": "/js/modules/access.min.js",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map",
+    "/js/modules/role.min.js": "/js/modules/role.min.js",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map",
+    "/js/modules/user.min.js": "/js/modules/user.min.js",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map",
     "/css/main.min.css": "/css/main.min.css",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js",
