[admin] customers and providers modules

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,35 +1,22 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=1560c7db40b7c32d8bb4",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=c6aeb08508ef3421841d",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=e43cc91c093e893d9fbe",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=c8506cc520f993150683",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=c2f186d6465360af976a",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=2cffd1db28c137c9d878",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=ae1c77b7a993cbdff2a8",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=acf5a96f60aa85ccfe1b",
-    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=dc6683e60fe87ad3c2c0",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=dd3821c608ab5a35e939",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=43e7d60659acd6c7db1b",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=9224032f8ea7a26ff747",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=656331296b64be98f0d4",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=7b3b6145a457af75657c",
-    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=8d93dfcf3ef286223e9a",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=33e7640809b48e780abf",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=0676fc25fef892f44f96",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=f5ae75860a8bf5a37b89",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=7e30d4ccd54837369693",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=4b29014904be8e8af3cf",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=2910c2653b50cff1a0e5",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=688ea046b31c844873cc",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=2a2aa39c6d5bbb9e89bc",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=8e3b7922066a68287842",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=906f9f924515670802ed",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=800ff6b50662d61d834a",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=bc5ea9c037a7d04a8878",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=7d4077fba5e4d418b945",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=463d2fd656fb50b1d8a3",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=e734ae5eb00f2261a458",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=162669291d68fb2f4235",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=77c81438e52259452a45",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=5c83afba51d3fc1aa740",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=f28a0f1d18759c1b0434",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=0f80bdb2d54bc92d71d8",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=f8e15f9e9f5a8d8024f0",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=271ec38d4033d235cd89",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=6b67720284e8e3c60a87",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=945bab2fb54f87ebdf8a",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=f1fcb766437d4392cc32",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=84917d755cd5caf07a5d",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=cd211fd30f92901f37be",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=3188a6d7c473ae174bed",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=d8924bcbd0437e4ccc1e",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=9537e3ba5047672c7824",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=e14933a5aadbf7781501",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=e4c6079cbaccc993cff9",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=19448a88e129c981a676",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=b75db359c8306f74ae4d",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
