--- a/admin/package.json
+++ b/admin/package.json
@@ -35,6 +35,7 @@
         "gulp-cached": "^1.1.1",
         "moment": "^2.22.2",
         "npm": "^6.9.0",
+        "select2": "^4.0.6-rc.1",
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.1.0-beta.8",
         "vue-select": "^2.5.1"
