[admin] new register module provider

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,22 +1,24 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=3b9ac8a6392662c3c2d5",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=d8bc7f180854c38ed6c4",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=0e837fe04945cd683410",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=a4c5eee4ef1f451c2ebe",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=9d4f6959f20816ee0aef",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=7d1d0933563dc4bfa894",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=8862377d14425e4f41f4",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=04e6315f168ef0b30c2f",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=a4daab7e7d1928c9f095",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=2577ac80b9283fd63413",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=271ec38d4033d235cd89",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=b7510880792b4f33928d",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=adde64af8b02c6d4e051",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=17f489528c13ec6582fa",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=54dc23622e50545867d8",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=45250ac800a5ba10c77d",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=e80b6b6250091aec1afa",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=c0c0f27dfe7b823d745d",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=42c7fbfb34f47fa5ff2d",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=6f9ccb360d918eef534b",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=06405b7c722051a8821b",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=8f906e453600a77006a6",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=09ee25ba9f0ddd9b385a",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=0c5d85ea4f8e49a2f1e3",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=c800a8144d1cad4d87d0",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=9736b09fde0026dcb038",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=1d44be1088937c2d4e64",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=de46f4cb14b01c4a0ff4",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=3d84d0bd989873bc4453",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=b84c59ff33b52c3c9b38",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=9b5849ec0f76eb4b0f18",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=196badc0a5d51189fc42",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=669fa3d8e8541b69509f",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=b05e63fdaf886898ee32",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=6fdd154540ad4b0357f8",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=0d8306ceb293c4e928d8",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=462908a9adb507bba4d6",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
