--- a/admin/composer.json
+++ b/admin/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "authy/php": "^3.0",
+        "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "intervention/image": "^2.4",
