[admin] module stock

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -2,7 +2,7 @@
     "/js/modules/access.min.js": "/js/modules/access.min.js?id=cd7af2ee05bddf1f8294",
     "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=6df0a352f7f70ecf2c38",
     "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=c06c29a51579615f6c29",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=2deb971f5e6fd8dd358c",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=a7e8bb8e7560ee265187",
     "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=b2cad60f26bb1bdd82ba",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=271ec38d4033d235cd89",
     "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=6d2f4a4963a51fa88e38",
@@ -13,12 +13,13 @@
     "/js/modules/page.min.js": "/js/modules/page.min.js?id=f8894d10de0cc146f5a8",
     "/js/modules/products.min.js": "/js/modules/products.min.js?id=426875289ec6a269df9e",
     "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=77392c40ac8f5b9f20ed",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=a87936b96f38242f361f",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=a047e6db1edadb2c4167",
     "/js/modules/role.min.js": "/js/modules/role.min.js?id=89d8714eb4e6a7466b13",
     "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=55d1d654cdf2c71a3e51",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=2b806ecb3140b617cf13",
     "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=8eea548fc0779e3a01bb",
     "/js/modules/user.min.js": "/js/modules/user.min.js?id=dee202fc07ad77896400",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=8f970ef25529f7752afd",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=88f535b7bb413b198c54",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
