[admin] Purchase request and quote modules

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -2,7 +2,7 @@
     "/js/modules/access.min.js": "/js/modules/access.min.js?id=7d1d0933563dc4bfa894",
     "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=8862377d14425e4f41f4",
     "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=04e6315f168ef0b30c2f",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=ffe36cc4fa8dbd08193c",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=52f245e671ae3ef35aab",
     "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=2577ac80b9283fd63413",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=271ec38d4033d235cd89",
     "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=0c5d85ea4f8e49a2f1e3",
@@ -14,12 +14,13 @@
     "/js/modules/products.min.js": "/js/modules/products.min.js?id=0372743f211b07f039e6",
     "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=9b5849ec0f76eb4b0f18",
     "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=2a03e45ef24abaa19724",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=0f3beb1c56424be946b8",
     "/js/modules/role.min.js": "/js/modules/role.min.js?id=669fa3d8e8541b69509f",
     "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=b05e63fdaf886898ee32",
     "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=e2bcfd71eee5820150fb",
     "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=bea1c19bc5ca630b917b",
     "/js/modules/user.min.js": "/js/modules/user.min.js?id=0d8306ceb293c4e928d8",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=6f07656bea4d80ac04c3",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=9b124c58e96f62344a0e",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
