--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,27 +1,49 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=7d1d0933563dc4bfa894",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=8862377d14425e4f41f4",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=04e6315f168ef0b30c2f",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=7c86d5c1fd0f03be6594",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=2577ac80b9283fd63413",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=868a2bbd4221c5143c3c",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=0c5d85ea4f8e49a2f1e3",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=c800a8144d1cad4d87d0",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=9736b09fde0026dcb038",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=1d44be1088937c2d4e64",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=de46f4cb14b01c4a0ff4",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=3d84d0bd989873bc4453",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=0372743f211b07f039e6",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=9b5849ec0f76eb4b0f18",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=2a03e45ef24abaa19724",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=d861bc47987349c93b7a",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=8a396c8bff7c65ab120c",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=669fa3d8e8541b69509f",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=b05e63fdaf886898ee32",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=e2bcfd71eee5820150fb",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=bea1c19bc5ca630b917b",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=0d8306ceb293c4e928d8",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=b08adb0356f48d35baab",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=cad4aa75a5692666daa1",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=bd399c128735602d4bf5",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=7569d130a3cb24d8ad52",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=f07a293100c80a4d020c",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=182710619321a34c2230",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=721ae54a6a8df9a2e2a3",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=77f087c9e6becb4cdbd5",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=1ed95e6af9e391045373",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=f9f9c4e284271393e6a8",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=84666fd352d9d81e3b38",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=abfcc10141f594e06376",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=ded643ae57b9ee53aa12",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=787bd8983feadc1ff78a",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=96a00b6c43704bb0ba40",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=5369c9c2eb1d7f91a451",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=c703a8a44a4eac121ab5",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=c85f2ac637de3ab054d8",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=131cc3b286d8617f9fec",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=105884a912b2b54e3e33",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=db0e1b3cfb87c2a7dbcb",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=d7d7cea23c4f85227184",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=761f662ce18f80f134e6",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=4ceb5293247d44205e35",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=68cd4250466596964bb2",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=a9869f8f86b770327d71",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=80ee00b02c7c4d199a69",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=0a329d5c4824d16130df",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=0a23b652d1ff07c76855",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=4595fad0896c359b682c",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=f595ab7c6a6fd5e29874",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=521535b2e98d27c2f918",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=5b5aba077ca69b263462",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=4ad5d6046e88c6a8b375",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=0ee7b7e13e6d4a43a109",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=503d532b82c0ba6c5cd0",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=16fda83d3c98a48a1eb8",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=b6609e380761b5032ce5",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=1bfe966e5b2eedafd00c",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=e5c6caa2b1fc07c558e7",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=7b5b41629c92fd7c6fd6",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=b889a9fdd28da097814d",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=e469f73fdd76f45621bd",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
