--- a/admin/composer.json
+++ b/admin/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "authy/php": "^3.0",
         "barryvdh/laravel-dompdf": "^0.8.4",
+        "endroid/simple-excel": "^2.1",
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "intervention/image": "^2.4",
