--- a/admin/composer.json
+++ b/admin/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "lavary/laravel-menu": "^1.7",
+        "maatwebsite/excel": "^3.1",
         "nexmo/client": "^1.6",
         "nexmo/laravel": "^1.1",
         "rap2hpoutre/laravel-log-viewer": "^1.0"
