--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,27 +1,49 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=4fd508cbf4cc5e7176fa",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=ca6bf8f47ec466d6a842",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=178219fb657c7d337c67",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=50c2f270c71bce09bd31",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=6b9aaac82994d8578219",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=868a2bbd4221c5143c3c",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=b126b88508409f987aed",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=13bd155cbf8231b47f3d",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=bbe4b79ad8abc35fcbec",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=1d44be1088937c2d4e64",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=4d16474ed9cd9f751053",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=97a28288978302f37f25",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=874fbc2c27059716184f",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=e968d441ad277ba319f0",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=b11e41823adfa361d5fc",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=c9b326ff46182b41b80f",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=a482819fff8054446046",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=9a977862eb7be73fcbbb",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=086444ecf5aa584d6513",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=a3dd3e27b704c476b634",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=db99cc7c3679e6b4a07f",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=cf0c68513de777a2ed52",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=ca859f5d3d919b4dae8d",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=cad4aa75a5692666daa1",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=bd399c128735602d4bf5",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=b2544fe50dab5fef8ef7",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=4b92ddfd49dfeb279c2a",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=f0424deb027ca4e0ac0e",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=e5d2f882d1b89d84d5bf",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=a8cdca993ee4f5c99239",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=81cefe718110bae74df3",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=5330799a5e4f7036b8f1",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=b26577b770b40842daf6",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=901b5e6a248953f095bc",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=b8045353f8f721e518b1",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=1782d646b8f57763adcc",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=22796cfff804165ec518",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=6fe980b1bb07fd067272",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=dcaf8ae6f6098f931f01",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=cbdca1f7b96e21b5e8fa",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=c2835957a7ab42722131",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=030e1cac310bea7b9dd8",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=00fa54eb2fa6336dac3c",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=c7008c1fa856a88d4afd",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=78d07e89e73081f7f755",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=87c309d6a106e7ec1f77",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=080f7e051f60cdad8b54",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=19b9b15a19b8e9fc85a6",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=e117b03ddd43ef3be362",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=29a9a3660eb292674ce7",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=6d4d8cc7e45d2a72cb41",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=bebb5418d32a33882214",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=3b9cc7ca76785c31ea8b",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=e3d2c7404c2ac6ca1314",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=498b8f32146745532b36",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=30a02b7c7cae694d2ee2",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=952863b7c7c7675cfb95",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=76c3998f109b5a05d424",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=d1150b412119ba96361c",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=f2babbbb9d47e10e61b9",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=78c404ff0f618d03ae7c",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=37d8354baa1e603dfcaf",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=5f2ca7757b59006ab8c9",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=d5d1f610c8f4d977c3af",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=cd5997cecce0566bd244",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
