[products] upload images

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,49 +1,49 @@
 {
     "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
     "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=8bfdd531291edb79483b",
-    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=97eb6b3a941df047086d",
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=364ce9b695a1f712fa51",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=12267e007e65a53be8bc",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=7e6eaebf71f28d0c7bf3",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=9a35c2c6b86af41c5d49",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=93ec726b47aa6f502b4b",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=622e0b60ebd5554d0380",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=c5795d89eae2d481a250",
-    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=cb5eac758a47a5ccf402",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=3e99ab4b3fd7bd2f2408",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=cad4aa75a5692666daa1",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=bd399c128735602d4bf5",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=0869e3d16eb14d570710",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=b0c60f80879cf933026a",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=29c9b1c95a404d546eb3",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=03583e5021dad6c6eea4",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=c71cfe85db26eb0127a6",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=5873d85919588bcad1e3",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=3b49093725fecf92a880",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=85a01e520280d365b8e2",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=45cf0afd86ddb9cdd33d",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
-    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=dcc51b700583b9788a2b",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=c4d47fcf4ec4d65b3b27",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=f041b6ca9a70459612f9",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=5baaa688a912c79393d9",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=67ed632bc60903d99c37",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=fdcda28865f9506fc721",
-    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=dd8b48f697b48cce2553",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=6e373500f58e92639583",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=ded94a5ca2730ed791d4",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=da452ed9598db348b048",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=5e4a7d3bf1e83cae4f4d",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=2e5e04ab15624bf43b6c",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=8503079424185eba098d",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=88ff414bc2b80ccdfc17",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=a440f3ef660551978f71",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=226728a96bd197729cb8",
-    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=8ccc12850e8358c25201",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=a6c0bff14235033858ea",
-    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=7ef5aed4d2e63bef8ce3",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=0d26427eac6c326c7502",
-    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=9de61f41bb7ad4fbd979",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=c1741fb26ed8a714d8f3",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=277daef1ab4ccc5dc12f",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=80289a14e72ad1b5716f",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=e599cef8dc1cba95f8ff",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=71965fd42b6188ce3e2c",
-    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=00553b2b9a934bbfc48b",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=fa0b7045a6f043baf182",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=467d76798f0ecf5cb510",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=dea418ed80e9ab18e340",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=d9c1c2ae323a73d69958",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=0bd5fc1388add57083ee",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=3fb1d03b6985929d6d91",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=431390174d38348a9494",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=aa0c54d3118e1c6ede9a",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=7edf402e3624c7e62879",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=f4b76c235db1197dee0d",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=0e6698671bbac411930f",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=bfb28faabbe3d2fc3e39",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=744a818985a72c2678f5",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=da37969770ce971b4ea8",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=521e30f1ce2c851af856",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=2ac7b9e5f7e2415ebf12",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=6787fb33dea5e0a74b07",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=5be1850def40660fc5e7",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=c49c5c2de020775fa7de",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=35dd5333c2f43a43ddf7",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=d5f2c371df4a4dbda920",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=5ab7ec5867ec87c0be3f",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=8fd7dc05f5f456d311bf",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=228841ece2a2a81ed722",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=4bb72eb60e7f2f59115c",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=152828edca1f108b4ce1",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=74afde01a452009d0a18",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=69fec10acc57bbfc2200",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=1a1aebe4779fda90eb12",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=d50522ef6ed7aaf10b63",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=e80126def2207608684a",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=21d99a9493eea2d8d0d4",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=a9902e42d04cce37feb0",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=1b101ed37e054a0f5e9f",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=baad7db49cea60b55e7b",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
@@ -59,5 +59,6 @@
     "/images/not-image-product.png": "/images/not-image-product.png?id=d2c815eceb07f0817879",
     "/images/placeholder-upload.png": "/images/placeholder-upload.png?id=b523b736304894e7e604",
     "/images/marca_agua.png": "/images/marca_agua.png?id=fd8985ea51a945b80b60",
+    "/images/generic.png": "/images/generic.png?id=884901f06470a43c6774",
     "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c"
 }
