--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,8 @@
         "bootstrap": "^4.0.0",
         "bootstrap-sass": "^3.3.7",
         "bootstrap-vue": "^2.0.0-rc.14",
+        "browser-sync": "^2.26.7",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
         "datatables.net-bs4": "^1.10.19",
         "jquery": "^3.2",
