[admin:purchase-request] refactory

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,29 +1,52 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=2cb7d0e45cbbc62918b8",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=f8e2fa3fdf321fb35098",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=a78983c1d1fb68da330b",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=54d56f93e468bf8e513a",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=527766b14b4030b67105",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=868a2bbd4221c5143c3c",
-    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=4ea6fd468caa524f9b22",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=3379d032313a65242ae7",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=fd7caf4a0fc6e224d9e3",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d987b987aec916670b73",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=1d44be1088937c2d4e64",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=5ebc0dcfe61018220f32",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=3ec041413da4a5e888a1",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=770aea19fff6556b292b",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=8113b54ccf2a74fa69b9",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=375592a18b6061bf845d",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=6fd6581016625dd30f96",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=7c8e9317123b410488a2",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=378d3206caefa1b74c7c",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=646bfc8e1b1a2c382fba",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=a1ce9b98cdd6919a66f8",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=638cf0418afd751f2558",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=0a34a74ad3636be07d72",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=551d64fa6ed3386ac2e3",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=ad479a03bb5c7461c60f",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6a4eb117ddc7ca47286f",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=302ad5dc81a77672af41",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=23ec6a96c059e6102de2",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=bd399c128735602d4bf5",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=0869e3d16eb14d570710",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=cebfd91aa01f659b30e7",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=29c9b1c95a404d546eb3",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=526f36544932ebb48628",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=c71cfe85db26eb0127a6",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=efc8e14e509ed608b985",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=04319aebb33292fcdcb8",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=7e005d719c643a5133ac",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=10bbda0a738885f5753d",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=899eca035ff062d5996f",
+    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=8d118988c3daa40301ae",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=4c16123feb6cca4816b2",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=3fb1d03b6985929d6d91",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=529fed9c698d3831bc9c",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=aa0c54d3118e1c6ede9a",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=48e6a86f46c5239534e9",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=f4b76c235db1197dee0d",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=c46261256eb2b4cabc55",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=bfb28faabbe3d2fc3e39",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=d4b93961158e6a6bcb61",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=da37969770ce971b4ea8",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=75747938a1ca2fa5cfd6",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=e9acc766f9b5877d0c28",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=6fe4527f42e0a8ed3bdb",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=440ce0b02de3bbd9ab11",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=d7026aa00aff6ab3d987",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=2cbc2738982f83b5246c",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=bc5ae632f253666739ac",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=73ff0c1add6244fbebac",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=29fad6361e542f0bdf13",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=3ed68fcef339cde43134",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=ca823d9dc43cc5da6d39",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=fb7de715a7937df97cb5",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=2a96f1b9553c7497f27d",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=5d9dcb4b8fd701e38e33",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=d539e54d9b4a77da077b",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=4f73659646c1312dce8c",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=6969a19643ee586f612e",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=01510dfe404222a25fe7",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=0cd6ba01e8261087d58b",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=4d5f43b8bf4de9cbc81f",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=7ce627917474bb354e67",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=d8b21efa33707c7c3f8d",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=4ba94af3ce0da5560502",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/jquery-3.2.1.min.js": "/js/jquery-3.2.1.min.js?id=c9f5aeeca3ad37bf2aa0",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js?id=65819b7164872c880e7d",
